various changes - added Masternode summary box etc

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,6 +29,7 @@ html
             $("#supply").text(json.data[0].supply);
             $("#difficulty").text(json.data[0].difficulty);
             $("#difficultyHybrid").text(json.data[0].difficultyHybrid);
+            $("#masternodeCount").text(json.data[0].masternodeCount);
             $("#hashrate").text(json.data[0].hashrate);
             $("#lastPrice").text(json.data[0].lastPrice.toFixed(8));
             $("#lblConnections").text(json.data[0].connections + ' connections');
@@ -135,27 +136,28 @@ html
     .col-md-12
       .row.text-center
         .col-md-2.col-md-offset-1
-          .panel.panel-default.hidden-sm.hidden-xs
-            .panel-heading
-              if settings.nethash_units == 'K'
-                strong #{settings.locale.network} (KH/s)
-              else if settings.nethash_units == 'M'
-                strong #{settings.locale.network} (MH/s)
-              else if settings.nethash_units == 'G'
-                strong #{settings.locale.network} (GH/s)
-              else if settings.nethash_units == 'T'
-                strong #{settings.locale.network} (TH/s)
-              else if settings.nethash_units == 'P'
-                strong #{settings.locale.network} (PH/s)
-              else if settings.nethash_units == 'H'
-                strong #{settings.locale.network} (H/s)
-            .panel-body
-              if settings.index.difficulty == 'Hybrid'
-               label#hashrate -
-               <br>
-               label#lblX1
-              else
-               label#hashrate -
+          if settings.index.show_hashrate.enabled == 'true'
+           .panel.panel-default.hidden-sm.hidden-xs
+             .panel-heading
+               if settings.nethash_units == 'K'
+                 strong #{settings.locale.network} (KH/s)
+               else if settings.nethash_units == 'M'
+                 strong #{settings.locale.network} (MH/s)
+               else if settings.nethash_units == 'G'
+                 strong #{settings.locale.network} (GH/s)
+               else if settings.nethash_units == 'T'
+                 strong #{settings.locale.network} (TH/s)
+               else if settings.nethash_units == 'P'
+                 strong #{settings.locale.network} (PH/s)
+               else if settings.nethash_units == 'H'
+                 strong #{settings.locale.network} (H/s)
+             .panel-body
+               if settings.index.difficulty == 'Hybrid'
+                label#hashrate -
+                <br>
+                label#lblX1
+               else
+                label#hashrate -
         .col-md-2
           .panel.panel-default.hidden-sm.hidden-xs
             .panel-heading
@@ -168,6 +170,12 @@ html
               else
                label#difficulty -
         .col-md-2
+         .panel.panel-default.hidden-sm.hidden-xs
+            .panel-heading
+              strong #{settings.locale.masternodecount}
+            .panel-body
+              label#masternodeCount -
+        .col-md-2
           .panel.panel-default.hidden-sm.hidden-xs
             .panel-heading
               strong #{settings.locale.ex_supply} (#{settings.symbol})
@@ -178,18 +186,18 @@ html
                label#lblX1
               else
                label#supply -
-        .col-md-2
-          .panel.panel-default.hidden-sm.hidden-xs
-            .panel-heading
-              strong #{settings.markets.exchange} Price
-            .panel-body
-              if settings.index.difficulty == 'Hybrid'
-               label#lastPrice -
-               <br>
-               label#lblX1
-              else
-               label#lastPrice -
-
+        if settings.display.markets == true
+         .col-md-2
+           .panel.panel-default.hidden-sm.hidden-xs
+             .panel-heading
+               strong #{settings.markets.exchange} Price
+             .panel-body
+               if settings.index.difficulty == 'Hybrid'
+                label#lastPrice -
+                <br>
+                label#lblX1
+               else
+                label#lastPrice -
       .row.text-center(style='margin-top:10px;margin-bottom:20px;')
         form.form-inline(method='post', action='/search')
           #index-search.form-group
