updated footer / added donation address

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -229,8 +229,10 @@ html
       .col-md-4
         ul.nav
           li.text-center(style='margin-left:80px;margin-right:80px;')
-            p(style='margin-top:15px;')
-              a.navbar-link(href='https://github.com/iquidus/explorer', target='_blank') Powered by Iquidus Explorer
+            p(style='margin-top:13px;')
+              a.navbar-link(href='https://github.com/mainconceptx/SKELR-Explorer', target='_blank') SKELR Explorer (Based on Iquidus Explorer)
+              <br>
+              label(class='donate') Donate SKELR: SQoUAjGhF63WnSdbxa5iD1DujDKAC6AeXH
       span.connections
         label#lblBlockcount.label.label-default -
         label#lblConnections.label.label-default -
