modified donation string

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -232,7 +232,7 @@ html
             p(style='margin-top:13px;')
               a.navbar-link(href='https://github.com/mainconceptx/SKELR-Explorer', target='_blank') SKELR Explorer (Based on Iquidus Explorer)
               <br>
-              label(class='donate') Donate SKELR: SQoUAjGhF63WnSdbxa5iD1DujDKAC6AeXH
+              label(class='donate') SKELR Donation: SQoUAjGhF63WnSdbxa5iD1DujDKAC6AeXH
       span.connections
         label#lblBlockcount.label.label-default -
         label#lblConnections.label.label-default -
