added country column to masternode list

--- a/views/masternodes.jade
+++ b/views/masternodes.jade
@@ -27,7 +27,6 @@ block content
                             var seconds = activesec % 60;
                             json.data[i]['activesec'] = ('0' + hours).slice(-2) + ':' + ('0' + minutes).slice(-2) + ':' + ('0' + seconds).slice(-2);
                             json.data[i]['address'] = json.data[i]['address']
-                            //json.data[i]['address'] = json.data[i]['address'].split(':')[0];
                         }
 
 
@@ -40,9 +39,10 @@ block content
                 columns: [
                     {data: 'pubkey', width: '30%'},
                     {data: 'status', width: '15%'},
-                    {data: 'lastseen', width: '20%'},
-                    {data: 'activesec', width: '15%'},
-                    {data: 'address', width: '20%'}
+                    {data: 'lastseen', width: '15%'},
+                    {data: 'activesec', width: '10%'},
+                    {data: 'address', width: '20%'},
+                    {data: 'country', width: '10%'}
                 ]
             });
             setInterval(function () {
@@ -62,4 +62,5 @@ block content
                         th.text-center #{settings.locale.mn_lastseen}
                         th.text-center #{settings.locale.mn_activesec}
                         th.text-center #{settings.locale.mn_address}
+                        th.text-center #{settings.locale.mn_country}
                 tbody.text-center
